System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86
Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-06 20:54, hash: rB3a35301fd16d
Worked: (optional)
Short description of error
materials with metal, sheen or transmission lose albedo data, or the albedo data becomes mixed in with additional data. Makes the albedo passes unsuitable for the intel denoiser.
Exact steps for others to reproduce the error
open below file, hit render then check the albedo passes in the compositor, the monkey's passes contain additional information besides just the required albedo data. In the regular albedo pass (diffuse colour), all texture data from the diffuse input is lost.
If it needs to work this way for compatibility with the old denoiser, perhaps a new 'intel denoising albedo pass' could be created, so the only information stored in the pass is whatever's plugged into the base colour of the material, without any lighting/reflection data.